# tage

./: Cargo.toml  diary.txt  license.md  manual.md  readme.md
assets/blueprints/: abilities.ron  base_bonuses.ron  civilizations.ron  powers.ron  techs.ron  terrains.ron  units.ron
assets/creation_presets/: four_machines.ron  peak_domination.ron  quick.ron  two_machines.ron
commands/: deploy.rs  expander.rs  map_symmetry.rs
crates/tage_core/: Cargo.toml
crates/tage_core/src/: game.rs  grid.rs  lib.rs  player.rs  prelude.rs  unit.rs  vec2.rs
crates/tage_core/src/actions/: attack.rs  build.rs  convert.rs  done.rs  end_turn.rs  heal.rs  merge.rs  mod.rs  pickup.rs  player_action.rs  power.rs  relic.rs  repair.rs  research.rs  test.rs  trade.rs  train.rs  travel.rs
crates/tage_core/src/blueprints/: ability_bp.rs  blueprints.rs  bonus.rs  civilization_bp.rs  constraints.rs  id.rs  mod.rs  power_bp.rs  resources.rs  tech_bp.rs  terrain_bp.rs  unit_bp.rs
crates/tage_core/src/machine/: boulder.rs  bruteforce.rs  distance_travel_map.rs  eval.rs  heuristics.rs  mod.rs  peak.rs  weighted.rs
crates/tage_core/src/test/: integration.rs  mod.rs  win_condition.rs
crates/tage_core/src/test/templates/: four_players_oasis.ron
crates/tage_tui/: Cargo.toml
crates/tage_tui/src/: input.rs  lib.rs  member.rs  menu_connect.rs  menu_load.rs  menu_lobby.rs  menu_main.rs  menu_pause.rs  menu_profile.rs  menu_settings.rs  navigator.rs  net.rs  settings.rs
crates/tage_tui/src/widgets/: battle_widget.rs  board_tile_widget.rs  board_widget.rs  bp_unit_widget.rs  button_widget.rs  cursor_widget.rs  member_widget.rs  mod.rs  panel_widget.rs  research_widget.rs  terrain_widget.rs  unit_stats_widget.rs  unit_widget.rs
src/: main.rs
(+24 files in other folders)
